👌  (playground)-fix width on smaller screen size

--- a/doc/src/pages/playground.scss
+++ b/doc/src/pages/playground.scss
@@ -20,7 +20,6 @@
 .playground-preview {
     display: flex;
     box-sizing: border-box;
-    padding: 2rem;
     justify-content: center;
     margin: 1em 10%;
 }
